# unit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  justfile
.github/ISSUES_DRAFT/: 01-arith-underflow-error.md  02-demo-pause-resume.md  03-docs-first-forth-word.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  formal-analysis.md  operations.md  protocol.md  self-replication.md  signaling.md  words.md
docs/design/: work-execution-model.md
polyglot/go/: README.md  go.mod  main.go  unit-go
polyglot/go/challenge/: challenge.go  challenge_test.go
polyglot/go/evolve/: evolve.go  evolve_test.go
polyglot/go/mesh/: mesh.go
polyglot/go/sexp/: sexp.go  sexp_test.go
polyglot/python/: README.md  challenge.py  evolve.py  main.py  mesh.py  sexp.py  test_challenge.py  test_evolve.py  test_sexp.py
src/: challenges.rs  discovery.rs  distgoal.rs  energy.rs  evolve.rs  fitness.rs  goals.rs  http.rs  integration_tests.rs  landscape.rs  main.rs  mesh.rs  metrics.rs  multi_unit.rs  mutation.rs  niche.rs  persist.rs  platform.rs  prelude.fs  reproduction.rs  resources.rs  sexp.rs  signaling.rs  snapshot.rs  spawn.rs  transport.rs  types.rs  wasm_entry.rs  ws_bridge.rs
src/features/: fitness.rs  io_words.rs  monitor.rs  mutation.rs  ws_bridge.rs
src/vm/: compiler.rs  mod.rs  primitives.rs  tests.rs
tests/: http_test.rs  idle_tick_test.sh  integration.sh  interop_test.sh  swarm_test.sh  three_species_test.sh
web/: 404.html  index.html  unit.js  unit.wasm
