[package]
name = "unit"
version = "0.20.3"
edition = "2021"
description = "A self-replicating software nanobot — minimal Forth interpreter that is also a networked mesh agent"
license = "MIT"
repository = "https://github.com/DavidCanHelp/unit"
homepage = "https://davidcanhelp.github.io/unit/"
documentation = "https://github.com/DavidCanHelp/unit#readme"
readme = "README.md"
keywords = ["forth", "mesh", "self-replicating", "distributed", "nanobot"]
categories = ["command-line-utilities", "network-programming"]
authors = ["David Liedle <david.liedle@protonmail.com>"]
exclude = [
  "tests/*",
  "target/*",
  ".github/*",
]

[dependencies]

[profile.release]
opt-level = "z"
lto = true
strip = true
